<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="@dimen/card_corner_radius"
    app:cardElevation="@dimen/card_elevation"
    app:cardMaxElevation="@dimen/card_max_elevation"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true"
    app:contentPadding="@dimen/card_content_padding">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/article_image"
            android:layout_width="@dimen/standard_thumbnail__image_width"
            android:layout_height="@dimen/standard_thumbnail_image_height"
            android:layout_marginStart="4dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/article_image_content_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@mipmap/ic_launcher" />


        <TextView
            android:id="@+id/article_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:padding="@dimen/spacing_normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/article_image"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/article_title_test_text" />

        <TextView
            android:id="@+id/article_abstract"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:padding="@dimen/spacing_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/article_image"
            app:layout_constraintTop_toBottomOf="@+id/article_title"
            tools:text="@string/article_abstract_test_text" />

        <TextView
            android:id="@+id/article_publication_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/article_abstract"
            app:layout_constraintTop_toBottomOf="@+id/article_abstract"
            tools:text="@string/publication_date_test_text" />


        <ImageButton
            android:id="@+id/share_article_button"
            android:layout_width="@dimen/image_button_width"
            android:layout_height="@dimen/image_button_height"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/share_article_content_desc"
            android:src="@drawable/ic_share"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/article_abstract" />

        <ImageButton
            android:id="@+id/archive_article_button"
            android:layout_width="@dimen/image_button_width"
            android:layout_height="@dimen/image_button_height"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/archive_article_content_desc"
            android:src="@drawable/ic_archive"
            app:layout_constraintEnd_toStartOf="@+id/share_article_button"
            app:layout_constraintTop_toBottomOf="@+id/article_abstract" />

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>
